--- a/index.html
+++ b/index.html
@@ -31,22 +31,30 @@
 
 <!-- hero section -->
 <section class="section-100" id="home">
-  <div class="container">
-    <div class="count-down-timer">
+  <div class="hero-container">
+    <div class="container">
+      <div class="main-center-container">
+        <div class="count-down-timer">
 
+        </div>
+        <h2>Warchief Gaming</h2>
+        <h1>Gaming Streaming</h1>
+
+        <h4>Powered by: NextGen</h4>
+        <h4>Monster Drink</h4>
+        <a href="#" class="btn">Tipka</a>
+
+        <div class="orc">
+          <img src="img/orc.png" alt="orc warrior" />
+        </div>
+      </div>
     </div>
-    <h2>Warchief Gaming</h2>
-    <h1>Gaming Streaming</h1>
-
-    <h4>Powered by: NextGen</h4>
-    <h4>Monster Drink</h4>
-    <a href="#" class="btn">Tipka</a>
   </div>
 </section>
 <!-- hero section END -->
 
 <!-- gaming streams -->
-<section class="section-100" id="schedule">
+<section class="section-100 schedule-section" id="schedule">
   <div class="container">
     <h2>What games are streamed</h2>
   </div>
@@ -54,7 +62,7 @@
 <!-- gaming streams END -->
 
 <!-- nextgen -->
-<section class="section-100" id="nextgen">
+<section class="section-100 nextgen-section" id="nextgen">
   <div class="container">
     <h2>nextgen</h2>
   </div>
@@ -62,12 +70,51 @@
 <!-- nextgen END -->
 
 <!-- monster -->
-<section class="section-min-100" id="monster">
+<section class="section-min-100 monster-section" id="monster">
   <div class="container">
     <h2>monster</h2>
   </div>
 </section>
 <!-- monster END -->
+
+<!-- follow -->
+<section class="section-100 follow-section" id="follow">
+  <div class="container">
+    <div class="section-container">
+      <h2>follow us:</h2>
+      <div class="row">
+        <div class="profile">
+
+        </div>
+        <div class="icons">
+          <h5>Follow me on my social media</h5>
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgen.png">
+          </div>
+        </div>
+        <div class="icons">
+          <h5>For more gaming streams follow us on</h5>
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- follow END -->
 
 <!-- footer -->
 <footer>
@@ -84,6 +131,7 @@
     <li><a href="#schedule" onclick="toggleMenu();">schedule</a></li>
     <li><a href="#nextgen" onclick="toggleMenu();">nextgen</a></li>
     <li><a href="#monster" onclick="toggleMenu();">monster</a></li>
+    <li><a href="#follow" onclick="toggleMenu();">follow us</a></li>
   </ul>
 </div>
 <!-- sidemenu END -->
