--- a/index.html
+++ b/index.html
@@ -35,17 +35,33 @@
     <div class="container">
       <div class="main-center-container">
         <div class="count-down-timer">
-
+          <h5>Streaming starts in:</h5>
         </div>
         <h2>Warchief Gaming</h2>
         <h1>Gaming Streaming</h1>
 
-        <h4>Powered by: NextGen</h4>
-        <h4>Monster Drink</h4>
-        <a href="#" class="btn">Tipka</a>
+        <h4>Powered by:</h4>
+        <div class="hero-links-container">
+          <a href="#nextgen">
+            <div class="hero-links-img">
+              <img src="img/nextgen.png" alt="nextgen logo" />
+            </div>
+          </a>
+
+          <a href="#monster">
+            <div class="hero-links-img">
+              <img src="img/monsterLogo.png" alt="monster energy drink logo" />
+            </div>
+          </a>
+        </div>
+        <a href="#schedule" class="btn">Streaming schedule <i class="fas fa-chevron-right"></i></a>
+        <a href="#nextgen" class="btn">NextGen <i class="fas fa-chevron-down"></i></a>
 
         <div class="orc">
           <img src="img/orc.png" alt="orc warrior" />
+        </div>
+        <div class="monster-can">
+          <img src="img/monster.png" alt="monster drink can" />
         </div>
       </div>
     </div>
