--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="header-container">
     <a href="#">
       <div class="logo">
-        WARCHIEF-GAMING
+        <h4>WarchiefGaming</h4>
       </div>
     </a>
     <div class="toggle" onclick="toggleMenu();"></div>
@@ -32,7 +32,7 @@
 <!-- hero section -->
 <section class="section-100" id="home">
   <div class="hero-container">
-    <div class="container">
+    <div class="container-hero">
       <div class="main-center-container">
         <div class="count-down-timer">
           <h5>Streaming starts in:</h5>
@@ -70,9 +70,58 @@
 <!-- hero section END -->
 
 <!-- gaming streams -->
-<section class="section-100 schedule-section" id="schedule">
+<section class="section-min-100 schedule-section" id="schedule">
   <div class="container">
-    <h2>What games are streamed</h2>
+    <div class="section-container">
+      <h2>What games are streamed</h2>
+      <div class="row">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/wow.png" alt="world of warcraft logo">
+          </div>
+        </div>
+        <div class="icons">
+          <h5>Follow me on my social media</h5>
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgen.png" alt="nextgen logo">
+          </div>
+        </div>
+        <div class="icons">
+          <h5>For more gaming streams follow us on</h5>
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgen.png">
+          </div>
+        </div>
+        <div class="icons">
+          <h5>For more gaming streams follow us on</h5>
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <!-- gaming streams END -->
@@ -94,7 +143,7 @@
 <!-- monster END -->
 
 <!-- follow -->
-<section class="section-100 follow-section" id="follow">
+<section class="section-min-100 follow-section" id="follow">
   <div class="container">
     <div class="section-container">
       <h2>follow us:</h2>
@@ -135,7 +184,45 @@
 <!-- footer -->
 <footer>
   <div class="container">
-    <h2>footer</h2>
+    <div class="footer-container">
+      <div class="footer-row-1">
+        <div class="footer-box-outer">
+          
+        </div>
+      </div>
+      <div class="footer-row-2">
+        <div class="footer-box-1">
+          <a href="#">
+            <h4>WarchiefGaming</h4>
+            <p>Don't forget to like, share and subscribe</p>
+            <p>See you on the next streaming!</p>
+          </a>
+        </div>
+        <div class="footer-box-2">
+          <div class="footer-box-2-half">
+            <h4>Navigation</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#schedule">Schedule</a></li>
+              <li><a href="#nextgen">NextGen</a></li>
+              <li><a href="#monster">Monster</a></li>
+              <li><a href="#follow">Follow Us</a></li>
+            </ul>
+          </div>
+          <div class="footer-box-2-half">
+            <h4>Social</h4>
+            <ul>
+              <li><a href="#schedule">Facebook</a></li>
+              <li><a href="#nextgen">YouTube</a></li>
+              <li><a href="#monster">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-row-3">
+        <p>&copy; 2021 Warchief Gaming -  created by: Sarif Design</p>
+      </div>
+    </div>
   </div>
 </footer>
 <!-- footer END -->
