--- a/index.html
+++ b/index.html
@@ -35,9 +35,28 @@
     <div class="container-hero">
       <div class="main-center-container">
         <div class="count-down-timer">
-          <h5>Streaming starts in:</h5>
+          <h5>Streaming Starts In:</h5>
+          <div class="clock">
+            <div class="time">
+              <h2 id="days"></h2>
+              <small>Days</small>
+            </div>
+            <div class="time">
+              <h2 id="hours"></h2>
+              <small>Hours</small>
+            </div>
+            <div class="time">
+              <h2 id="minutes"></h2>
+              <small>Minutes</small>
+            </div>
+            <div class="time">
+              <h2 id="seconds"></h2>
+              <small>Seconds</small>
+            </div>
+          </div>
+          <div class="live-info">NOW LIVE <i class="fas fa-exclamation-circle"></i></div>
         </div>
-        <h2>Warchief Gaming</h2>
+        <h2>WarchiefGaming</h2>
         <h1>Gaming Streaming</h1>
 
         <h4>Powered by:</h4>
@@ -54,7 +73,7 @@
             </div>
           </a>
         </div>
-        <a href="#schedule" class="btn">Streaming schedule <i class="fas fa-chevron-right"></i></a>
+        <a href="#schedule" class="btn">Streaming Schedule <i class="fas fa-chevron-right"></i></a>
         <a href="#nextgen" class="btn">NextGen <i class="fas fa-chevron-down"></i></a>
 
         <div class="orc">
@@ -72,8 +91,15 @@
 <!-- gaming streams -->
 <section class="section-min-100 schedule-section" id="schedule">
   <div class="container">
-    <div class="section-container">
+    <div class="row-up">
+      <div class="card-up">
+
+      </div>
+    </div>
+    <div class="section-title">
       <h2>What games are streamed</h2>
+    </div>
+    <div class="section-container">
       <div class="row">
         <div class="profile">
           <div class="profile-img">
@@ -81,7 +107,7 @@
           </div>
         </div>
         <div class="icons">
-          <h5>Follow me on my social media</h5>
+          <h5>World of Warcraft</h5>
           <ul>
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
@@ -92,11 +118,11 @@
       <div class="row">
         <div class="profile">
           <div class="profile-img">
-            <img src="img/nextgen.png" alt="nextgen logo">
+            <img src="img/doom.png" alt="doom eternal logo">
           </div>
         </div>
         <div class="icons">
-          <h5>For more gaming streams follow us on</h5>
+          <h5>Doom Eternal</h5>
           <ul>
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
@@ -108,11 +134,11 @@
       <div class="row">
         <div class="profile">
           <div class="profile-img">
-            <img src="img/nextgen.png">
+            <img src="img/unreal.png">
           </div>
         </div>
         <div class="icons">
-          <h5>For more gaming streams follow us on</h5>
+          <h5>Unreal Tournament '99</h5>
           <ul>
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
@@ -183,20 +209,32 @@
 
 <!-- footer -->
 <footer>
-  <div class="container">
+  <div class="footer-container">
     <div class="footer-container">
       <div class="footer-row-1">
         <div class="footer-box-outer">
-          
+          <div class="footer-box-outer-part-1">
+            <h4>Don't forget to</h4>
+            <ul>
+              <li>Like <i class="fas fa-check"></i></li>
+              <li>Share <i class="fas fa-check"></i></li>
+              <li>Subscribe <i class="fas fa-check"></i></li>
+            </ul>
+            <h5>More content coming soon</h5>
+          </div>
+          <div class="footer-box-outer-part-2">
+            <i class="fas fa-thumbs-up"></i>
+            <h5>You're awesome!</h5>
+          </div>
         </div>
       </div>
       <div class="footer-row-2">
         <div class="footer-box-1">
           <a href="#">
             <h4>WarchiefGaming</h4>
-            <p>Don't forget to like, share and subscribe</p>
-            <p>See you on the next streaming!</p>
           </a>
+          <p>Thank you for watching</p>
+          <p>See you on the next streaming!</p>
         </div>
         <div class="footer-box-2">
           <div class="footer-box-2-half">
