--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <title>Warchief Gaming | Gamer Streming</title>
   <link rel="shortcut icon" type="image/jpg" href="img/favicon.png"/>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -79,9 +82,6 @@
         <div class="orc">
           <img src="img/orc.png" alt="orc warrior" />
         </div>
-        <div class="monster-can">
-          <img src="img/monster.png" alt="monster drink can" />
-        </div>
       </div>
     </div>
   </div>
@@ -97,8 +97,9 @@
       </div>
     </div>
     <div class="section-title">
-      <h2>What games are streamed</h2>
+      <h2>Games We Stream.</h2>
     </div>
+    <div class="rotated-subtitle">Streaming</div>
     <div class="section-container">
       <div class="row">
         <div class="profile">
@@ -108,11 +109,9 @@
         </div>
         <div class="icons">
           <h5>World of Warcraft</h5>
-          <ul>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
-          </ul>
+          <p>Follow the adventures and battles of Warchief</p>
+          <p>Quests, battles, dungeouns, everything PvE</p>
+          <p>For the Horde!</p>
         </div>
       </div>
       <div class="row">
@@ -123,12 +122,9 @@
         </div>
         <div class="icons">
           <h5>Doom Eternal</h5>
-          <ul>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
+          <p>Classic reborn!</p>
+          <p>Lets rip through hell itself, leave no demon alive.</p>
+          <p>Time to grease up the good old chainsaw.</p>
         </div>
       </div>
       <div class="row">
@@ -139,12 +135,9 @@
         </div>
         <div class="icons">
           <h5>Unreal Tournament '99</h5>
-          <ul>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitch"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
+          <p>It begins!</p>
+          <p>Battle for fame and glory, </p>
+          <p>May the best man win!</p>
         </div>
       </div>
     </div>
@@ -155,7 +148,10 @@
 <!-- nextgen -->
 <section class="section-100 nextgen-section" id="nextgen">
   <div class="container">
-    <h2>nextgen</h2>
+    <div class="section-title">
+      <h2>NextGen Gaming House</h2>
+    </div>
+    <div class="rotated-subtitle">NextGen</div>
   </div>
 </section>
 <!-- nextgen END -->
@@ -163,7 +159,10 @@
 <!-- monster -->
 <section class="section-min-100 monster-section" id="monster">
   <div class="container">
-    <h2>monster</h2>
+    <div class="section-title">
+      <h2>Monster Energy Drink</h2>
+    </div>
+    <div class="rotated-subtitle">Monster</div>
   </div>
 </section>
 <!-- monster END -->
@@ -171,8 +170,11 @@
 <!-- follow -->
 <section class="section-min-100 follow-section" id="follow">
   <div class="container">
+    <div class="section-title">
+      <h2>Follow Us</h2>
+    </div>
+    <div class="rotated-subtitle">Social Media</div>
     <div class="section-container">
-      <h2>follow us:</h2>
       <div class="row">
         <div class="profile">
 
