--- a/index.html
+++ b/index.html
@@ -108,10 +108,18 @@
           </div>
         </div>
         <div class="icons">
+          <div class="next-stream-announcement">
+            <h4>Next Stream</h4>
+          </div>
           <h5>World of Warcraft</h5>
           <p>Follow the adventures and battles of Warchief</p>
           <p>Quests, battles, dungeouns, everything PvE</p>
           <p>For the Horde!</p>
+          <div class="next-stream-timeplace">
+            <h4>Streaming On</h4>
+            <h5></h5>
+            <h5 class="stream-link"><a href="#"><i class="fab fa-youtube"></i> YouTube</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -146,12 +154,58 @@
 <!-- gaming streams END -->
 
 <!-- nextgen -->
-<section class="section-100 nextgen-section" id="nextgen">
+<section class="nextgen-section" id="nextgen">
   <div class="container">
     <div class="section-title">
-      <h2>NextGen Gaming House</h2>
+      <h2>NextGen Gaming House.</h2>
     </div>
     <div class="rotated-subtitle">NextGen</div>
+
+    <div class="section-container">
+      <div class="nextgen-intro">
+        <div class="nextgen-intro-text">
+          <h4>NextGen</h4>
+          <p>Gaming house</p>
+          <p>Gaming house</p>
+          <p>Gaming house</p>
+        </div>
+        <div class="nextgen-intro-img">
+          <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+        </div>
+      </div>
+      <div class="nextgen-services-container">
+        <div class="nextgen-service-box">
+          <div class="nextgen-service-box-img img-1">
+
+          </div>
+          <div class="nextgen-service-box-text">
+            <h4>Tournaments</h4>
+            <p>All the hottest titles of eSports and more!</p>
+            <p>Take up a challenge and win prizes!</p>
+          </div>
+        </div>
+        <div class="nextgen-service-box">
+          <div class="nextgen-service-box-img img-2">
+
+          </div>
+          <div class="nextgen-service-box-text">
+            <h4>Birthday Parties</h4>
+            <p>All the hottest titles of eSports and more!</p>
+            <p>Take up a challenge and win prizes!</p>
+          </div>
+        </div>
+        <div class="nextgen-service-box">
+          <div class="nextgen-service-box-img img-3">
+
+          </div>
+          <div class="nextgen-service-box-text">
+            <h4>Team Building</h4>
+            <p>All the hottest titles of eSports and more!</p>
+            <p>Take up a challenge and win prizes!</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <!-- nextgen END -->
@@ -160,9 +214,10 @@
 <section class="section-min-100 monster-section" id="monster">
   <div class="container">
     <div class="section-title">
-      <h2>Monster Energy Drink</h2>
+      <h2>Monster Energy Drink.</h2>
     </div>
     <div class="rotated-subtitle">Monster</div>
+
   </div>
 </section>
 <!-- monster END -->
@@ -171,7 +226,7 @@
 <section class="section-min-100 follow-section" id="follow">
   <div class="container">
     <div class="section-title">
-      <h2>Follow Us</h2>
+      <h2>Follow Us.</h2>
     </div>
     <div class="rotated-subtitle">Social Media</div>
     <div class="section-container">
