--- a/index.html
+++ b/index.html
@@ -218,6 +218,108 @@
     </div>
     <div class="rotated-subtitle">Monster</div>
 
+    <div class="monster-row">
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right">
+            <h4>Classic</h4>
+            <p>Original Monster taste</p>
+          </div>
+        </div>
+      </div>
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster2.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right"></div>
+        </div>
+      </div>
+    </div>
+    <div class="monster-row">
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster3.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right">
+            <h4>Classic</h4>
+            <p>Original Monster taste</p>
+          </div>
+        </div>
+      </div>
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster4.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right"></div>
+        </div>
+      </div>
+    </div>
+    <div class="monster-row">
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster5.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right">
+            <h4>Classic</h4>
+            <p>Original Monster taste</p>
+          </div>
+        </div>
+      </div>
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster6.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right"></div>
+        </div>
+      </div>
+    </div>
+    <div class="monster-row">
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster7.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right">
+            <h4>Classic</h4>
+            <p>Original Monster taste</p>
+          </div>
+        </div>
+      </div>
+      <div class="monster-drink-box">
+        <div class="monster-can-box">
+          <div class="monster-can-left">
+            <div class="monster-can">
+              <img src="img/monster8.png" alt="monster drink can" />
+            </div>
+          </div>
+          <div class="monster-can-right"></div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </section>
 <!-- monster END -->
