--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
           </div>
         </div>
         <div class="icons">
+          <h5>Doom</h5>
+          <p>Classic reborn!</p>
+          <p>Lets rip through hell itself, leave no demon alive.</p>
+          <p>Time to grease up the good old chainsaw.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/doomClassic.png" alt="doom logo">
+          </div>
+        </div>
+        <div class="icons">
           <h5>Doom Eternal</h5>
           <p>Classic reborn!</p>
           <p>Lets rip through hell itself, leave no demon alive.</p>
