--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
           <p>For the Horde!</p>
           <div class="next-stream-timeplace">
             <h4>Streaming On</h4>
-            <h5></h5>
+            <h5>Monday, 6th December 2021</h5>
+            <h5>19:00 (CET)</h5>
             <h5 class="stream-link"><a href="#"><i class="fab fa-youtube"></i> YouTube</a></h5>
           </div>
         </div>
@@ -129,7 +130,7 @@
           </div>
         </div>
         <div class="icons">
-          <h5>Doom</h5>
+          <h5>Doom Eternal</h5>
           <p>Classic reborn!</p>
           <p>Lets rip through hell itself, leave no demon alive.</p>
           <p>Time to grease up the good old chainsaw.</p>
@@ -142,7 +143,7 @@
           </div>
         </div>
         <div class="icons">
-          <h5>Doom Eternal</h5>
+          <h5>Doom</h5>
           <p>Classic reborn!</p>
           <p>Lets rip through hell itself, leave no demon alive.</p>
           <p>Time to grease up the good old chainsaw.</p>
