--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>WarchiefGaming</h2>
         <h1>Gaming Streaming</h1>
 
-        <h4>Powered by:</h4>
+        <h4 class="title-dissapear">Powered by:</h4>
         <div class="hero-links-container">
           <a href="#nextgen">
             <div class="hero-links-img">
@@ -76,8 +76,10 @@
             </div>
           </a>
         </div>
-        <a href="#schedule" class="btn">Streaming Schedule <i class="fas fa-chevron-right"></i></a>
-        <a href="#nextgen" class="btn">NextGen <i class="fas fa-chevron-down"></i></a>
+        <div class="buttons">
+          <a href="#schedule" class="btn mobile-margin">Streaming Schedule <i class="fas fa-chevron-right"></i></a>
+          <a href="#nextgen" class="btn">NextGen <i class="fas fa-chevron-down"></i></a>
+        </div>
 
         <div class="orc">
           <img src="img/orc.png" alt="orc warrior" />
@@ -133,7 +135,7 @@
           <h5>Doom Eternal</h5>
           <p>Classic reborn!</p>
           <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p>Time to grease up the good old chainsaw.</p>
+          <p class="mb-12">Time to grease up the good old chainsaw.</p>
         </div>
       </div>
       <div class="row">
@@ -146,7 +148,7 @@
           <h5>Doom</h5>
           <p>Classic reborn!</p>
           <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p>Time to grease up the good old chainsaw.</p>
+          <p class="mb-12">Time to grease up the good old chainsaw.</p>
         </div>
       </div>
       <div class="row">
@@ -159,7 +161,7 @@
           <h5>Unreal Tournament '99</h5>
           <p>It begins!</p>
           <p>Battle for fame and glory, </p>
-          <p>May the best man win!</p>
+          <p class="mb-12">May the best man win!</p>
         </div>
       </div>
     </div>
