--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="rotated-subtitle">Streaming</div>
     <div class="section-container">
-      <div class="row">
+      <div class="row row-1">
         <div class="profile">
           <div class="profile-img">
             <img src="img/wow.png" alt="world of warcraft logo">
@@ -112,6 +112,7 @@
         <div class="icons">
           <div class="next-stream-announcement">
             <h4>Next Stream</h4>
+            <h5 class="stream-link"><a href="#"><i class="fab fa-youtube"></i> YouTube</a></h5>
           </div>
           <h5>World of Warcraft</h5>
           <p>Follow the adventures and battles of Warchief</p>
@@ -121,11 +122,10 @@
             <h4>Streaming On</h4>
             <h5>Monday, 6th December 2021</h5>
             <h5>19:00 (CET)</h5>
-            <h5 class="stream-link"><a href="#"><i class="fab fa-youtube"></i> YouTube</a></h5>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-1">
         <div class="profile">
           <div class="profile-img">
             <img src="img/doom.png" alt="doom eternal logo">
@@ -138,7 +138,7 @@
           <p class="mb-12">Time to grease up the good old chainsaw.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-1">
         <div class="profile">
           <div class="profile-img">
             <img src="img/doomClassic.png" alt="doom logo">
@@ -151,7 +151,7 @@
           <p class="mb-12">Time to grease up the good old chainsaw.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-1">
         <div class="profile">
           <div class="profile-img">
             <img src="img/unreal.png">
@@ -178,15 +178,17 @@
     <div class="rotated-subtitle">NextGen</div>
 
     <div class="section-container">
-      <div class="nextgen-intro">
-        <div class="nextgen-intro-text">
-          <h4>NextGen</h4>
-          <p>Gaming house</p>
-          <p>Gaming house</p>
-          <p>Gaming house</p>
+      <div class="row row-2">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+          </div>
         </div>
-        <div class="nextgen-intro-img">
-          <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+        <div class="icons">
+          <h5>NextGen</h5>
+          <p>Classic reborn!</p>
+          <p>Lets rip through hell itself, leave no demon alive.</p>
+          <p class="mb-12">Time to grease up the good old chainsaw.</p>
         </div>
       </div>
       <div class="nextgen-services-container">
@@ -221,10 +223,33 @@
           </div>
         </div>
       </div>
+      <div class="row row-2">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+          </div>
+        </div>
+        <div class="icons">
+          <h5>NextGen</h5>
+          <p>Classic reborn!</p>
+          <p>Lets rip through hell itself, leave no demon alive.</p>
+          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 <!-- nextgen END -->
+
+<section>
+  <div class="para-container">
+    <div class="para-background" id="para">
+      <div class="para-title">
+        <img src="img/secretLabLogo1.png" alt="secret lab logo" />
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- monster -->
 <section class="section-min-100 monster-section" id="monster">
@@ -233,7 +258,21 @@
       <h2>Monster Energy Drink.</h2>
     </div>
     <div class="rotated-subtitle">Monster</div>
-
+    <div class="section-container">
+      <div class="row row-1">
+        <div class="profile">
+          <div class="profile-img">
+            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+          </div>
+        </div>
+        <div class="icons">
+          <h5>NextGen</h5>
+          <p>Classic reborn!</p>
+          <p>Lets rip through hell itself, leave no demon alive.</p>
+          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+        </div>
+      </div>
+    </div>
     <div class="monster-row">
       <div class="monster-drink-box">
         <div class="monster-can-box">
@@ -348,12 +387,12 @@
     </div>
     <div class="rotated-subtitle">Social Media</div>
     <div class="section-container">
-      <div class="row">
+      <div class="row row-3">
         <div class="profile">
 
         </div>
         <div class="icons">
-          <h5>Follow me on my social media</h5>
+
           <ul>
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
@@ -361,14 +400,14 @@
           </ul>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-3">
         <div class="profile">
           <div class="profile-img">
             <img src="img/nextgen.png">
           </div>
         </div>
         <div class="icons">
-          <h5>For more gaming streams follow us on</h5>
+
           <ul>
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
