--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div class="row row-1">
         <div class="profile">
           <div class="profile-img">
-            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+            <img src="img/monsterLogo.png" alt="monster enegry drink logo" />
           </div>
         </div>
         <div class="icons">
@@ -277,6 +277,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster.png" alt="monster drink can" />
             </div>
@@ -290,6 +293,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster2.png" alt="monster drink can" />
             </div>
@@ -302,6 +308,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster3.png" alt="monster drink can" />
             </div>
@@ -315,6 +324,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster4.png" alt="monster drink can" />
             </div>
@@ -327,6 +339,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster5.png" alt="monster drink can" />
             </div>
@@ -340,6 +355,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster6.png" alt="monster drink can" />
             </div>
@@ -352,6 +370,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster7.png" alt="monster drink can" />
             </div>
@@ -365,6 +386,9 @@
       <div class="monster-drink-box">
         <div class="monster-can-box">
           <div class="monster-can-left">
+            <div class="burst-container">
+              <img src="img/burst.png" alt="blue neon color burst" />
+            </div>
             <div class="monster-can">
               <img src="img/monster8.png" alt="monster drink can" />
             </div>
